# examen-python

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
src/examen/: __init__.py
src/examen/lib/: base.py  bench.py  depends.py  report.py  scorers.py  trace.py
src/examen/lib/backends/: base.py  http.py  local.py
tests/: test_bench.py  test_local_backend.py
