[project]
name = "examen"
version = "0.0.4"
description = "Python SDK for Examen, a generic benchmarking platform."
readme = "README.md"
authors = [
    { name = "Célestin Cordos", email = "celestin.cordos@outlook.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/examen/example.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "UP046",  # keep Generic[T] syntax; pydantic generics + PEP 695 still has rough edges
    "UP047",  # same — keep TypeVar-based generics for consistency
    "B008",   # Depends(...) in defaults is the whole point of the DI API (FastAPI convention)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/examen"]

[[tool.mypy.overrides]]
module = "examen.example"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
